Implementación del controlador de buscar canción (HomeController)

--- a/src/public/templates/home/index.html.twig
+++ b/src/public/templates/home/index.html.twig
@@ -17,7 +17,7 @@
     <div class="main">
         <div class="titCanciones">
             <h1 class="titCanciones-inside">Canciones</h1>
-            <form method="GET" action="{{ path('home') }}" class="search-form">
+            <form method="GET" action="index.php" class="search-form">
                 <input type="text" name="query" placeholder="Buscar canción..." class="search-input" value="{{ query }}">
                     <button type="submit" class="search-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 48 48"><g fill="none" stroke="#23cf5f" stroke-linecap="round" stroke-width="4"><path d="m31 31l10 10"/><circle cx="20" cy="20" r="14"/></g></svg>
