--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -291,6 +291,7 @@ span, a {
     background-color: #2a2a2a;
     border-radius: 8px;
     font-size: 14px;
+    color: white;
 
     margin-left: 20px;
 }
