--- a/src/public/templates/home/index.html.twig
+++ b/src/public/templates/home/index.html.twig
@@ -58,7 +58,7 @@
                     </div>
             </div>
             {% else %}
-            <p>No se encontraron canciones.</p>
+                <p style='color: #cc0000; margin-left: 12px'>Error: No se encontraron canciones.</p>
             {% endfor %}
         </div>
     </div>
